# MonProjet

./: README.md
HTML/: attribute.html  headings.html  hello.html - Raccourci.lnk  https---ojs.aaai.org-index.php-AAAI-article-download-5384-5240.url  lists.html  size.html
math-lexer/: meson.build
math-lexer/src/: a.out  err  out
math-lexer/src/ast/: ast.c  ast.h
math-lexer/src/eval/: ast_print.c  rpn_print.c  token_printer.c
math-lexer/src/lexer/: lexer.c  lexer.h  token.c  token.h
math-lexer/src/parser/: parser.c  parser.h
math-lexer/src/utils/: alloc.h
